Fixed another alignment problem

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -15,6 +15,7 @@
  flex-wrap: wrap;
  padding-top: 10px;
  justify-content: center;
+ text-align: center;
 }
 
 .post {
